Small style change to make sure footer stays on the bottom if page is too short

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -217,7 +217,7 @@ a:hover {
     text-decoration: none;
 }
 .content {
-    /*margin-top: 9rem;*/
+    min-height: 65%;
 }
 .section {
     padding: 8rem 0 7rem;
